# deepin-menu

./: .clog.toml  .gitignore  .gitlab-ci.yml  .packit.yaml  1  AbstractMenu.qml  ActualMenu.qml  CHANGELOG.md  CMakeLists.txt  DesktopMenu.qml  DesktopMenuBackground.qml  DesktopMenuSelection.qml  DockMenu.qml  DockMenuBackground.qml  FullScreenMenu.qml  FullscreenBackground.qml  Main.py  Makefile  Menu.qml  MenuContent.qml  MenuDbus.py  MenuItem.js  MenuItemDelegate.qml  MenuItemListModel.qml  MenuItemListView.qml  MenuSelection.qml  README.md  Rect.qml  RectMenu.qml  RectWithCorner.qml  com.deepin.menu.Manager.xml  com.deepin.menu.Menu.xml  com.deepin.menu.service  dbus_manager_adaptor.cpp  dbus_manager_adaptor.h  dbus_menu_adaptor.cpp  dbus_menu_adaptor.h  ddesktopmenu.cpp  ddesktopmenu.h  ddockmenu.cpp  (+23 more)
Lib/: Menu.py  QtSignalTest.py
data/: com.deepin.menu.service
debian/: README.md  changelog  control  copyright  install  rules
deepin_menu/: ActualMenu.qml  DBusBackend.py  DBusInterfaces.py  DockMenu.qml  DockMenuWidget.qml  FullScreenMenu.qml  MenuItem.js  MenuItemDelegate.qml  MenuItemListModel.qml  MenuItemListView.qml  MenuSelection.qml  QuickMenu.py  Rect.qml  RectMenu.qml  RectMenuWidget.qml  RectWithCorner.qml  RectsTest.qml  __init__.py  cycle_number.py  event_handler.py  logger.py  main.py  menu.py
deepin_menu.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
rpm/: deepin-menu.spec
src/: dabstractmenu.cpp  dabstractmenu.h  dbus_manager_adaptor.cpp  dbus_manager_adaptor.h  dbus_menu_adaptor.cpp  dbus_menu_adaptor.h  ddesktopmenu.cpp  ddesktopmenu.h  ddockmenu.cpp  ddockmenu.h  dmenuapplication.cpp  dmenuapplication.h  dmenubase.cpp  dmenubase.h  dmenucontent.cpp  dmenucontent.h  main.cpp  manager_object.cpp  manager_object.h  menu_object.cpp  menu_object.h  utils.cpp  utils.h
